# Predator12-Dev

./: .gitignore  AI_AGENTS_MODELS_V4.md  DASHBOARD_VISUAL_GUIDE_V3.md  DEVELOPMENT_CHECKLIST.md  FINAL_REPORT_V3.md  FINAL_STATUS.txt  FINAL_STATUS_V4.md  FINAL_SYSTEM_STATUS.txt  GITHUB_SETUP.md  GIT_COMMIT_INSTRUCTIONS.md  GIT_COMMIT_SUCCESS.txt  GIT_PUSH_EMERGENCY.txt  GIT_PUSH_SOLUTIONS.md  GIT_READY_TO_PUSH.txt  MEGA_DASHBOARD_ALL_SERVICES.md  MEGA_DASHBOARD_COMPLETE.md  MEGA_DASHBOARD_FINAL_REPORT.md  MEGA_DASHBOARD_QUICKREF.md  MEGA_DASHBOARD_QUICKSTART.md  MEGA_DASHBOARD_README.md  MEGA_DASHBOARD_STATUS.md  MEGA_DASHBOARD_VISUAL_GUIDE.md  MEGA_DASHBOARD_VISUAL_SUMMARY.txt  PHASE1_API_INTEGRATION.md  PHASE1_CHECKLIST.md  PHASE1_COMPLETE.md  PHASE1_COMPLETION_SUMMARY.txt  PHASE1_DOCUMENTATION_INDEX.md  PHASE1_FINAL_COMPLETION_REPORT.md  PHASE1_QUICKSTART.md  PHASE1_STATUS_FINAL.md  PHASE1_VISUAL_SUMMARY.txt  QUICKSTART_V3.md  QUICKSTART_V4.txt  README.md  VOICE_INTEGRATION_GUIDE.md  WEB_INTERFACE_ENHANCEMENT_V3.md  app.js  app.py  check-phase1-status.sh  (+39 more)
predator12-local/backend/app/: README.md  __init__.py  adaptive_limiter.py  auth.py  auth_security.py  celery_app.py  config.py  ingest.py  main.py  otel.py  pyproject.toml  rate_limiting.py  routes_agents_real.py  simple_main.py  worker_entry.py
predator12-local/backend/app/agents/: demo_specialized_routing.py  hub.py  model_analytics.py  model_router.py  new_agent_template.md  optimized_registry.yaml  policies.yaml  registry.yaml  routes.py  specialized_model_router.py  specialized_registry.yaml  supervisor.py  system_status_report.py  validate_distribution.py
predator12-local/backend/app/api/: voice_providers.py
predator12-local/backend/app/fastapi_app/: agents_config.py  agents_config.py.backup2  ai_assistant.py  auth_manager.py  billing_manager.py  data_governance.py  data_governance_enhanced.py  dataset_registry.py  dr_enhanced_manager.py  dr_manager.py  error_system.py  etl_trigger.py  event_logger.py  event_producer.py  export_worker.py  health_monitor.py  ilm_enhanced_manager.py  ilm_manager.py  ingest_manager.py  main.py  middleware_audit.py  ml_manager.py  mlflow_manager.py  mlops_enhanced_manager.py  object_storage.py  routes_agents.py  routes_agents_fixed.py  routes_agents_limited.py  routes_agents_optimized.py  routes_agents_optimized_v2.py  routes_agents_optimized_v3.py  routes_billing.py  routes_export.py  routes_ingest.py  routes_ml.py  routes_search.py  routes_security.py  routes_ws.py  secrets_manager.py  security_manager.py  (+2 more)
predator12-local/backend/app/langgraph/: query_planner.py
predator12-local/backend/app/mcp/: advanced_ai_bot.py  ai_integration_hub.py  ai_model_tester.py  package.json
predator12-local/backend/app/nexus/: __init__.py  chrono_spatial.py  dataops.py  simulations.py
predator12-local/backend/app/tasks/: simple_tasks.py
predator12-local/backend/app/tests/: test_ingest.py
predator12-local/etl/dagster/: Dockerfile  dagster.yaml  dagster_pipeline.py  pyproject.toml  requirements.txt
(+1140 files in other folders)
